2019-09-30

        * Version 1.7.0 released
        ========================

        Add GSkyMap::extract() methods (#2990)
        Add GCOMDri::cone_content() method (#2973)
        Add GCOMObservation::drm(GModels&) method (#2973)
        Implement methods to remove models from a response cache (#2973)
        Improve COMPTEL classes (#2973)
        Add GGti::overlap() method
        Correctly write model attributes in GCOMModelDRBFitting class
        Add GTime.datetime() method and add optional precision to GTime.utc() (#2909)


2019-07-15

        * Bug fix version 1.6.2 released
        ================================

        Set dependency library versions for conda build (#2958)


2019-06-05

        * Bug fix version 1.6.1 released
        ================================

        Fix initialisation script for c-shell (#2724)


2019-05-29

        * Version 1.6.0 released
        ========================

        Allow fitting of instrument scale factors (#2892)
        Add GCTAModelSpatialLookup class to handle CTA background lookups (#2878)
        Implement energy-dependent Gaussian CTA spatial background model (#2868)
        Take instrument scale factors in On/Off analysis into account (#2867)
        GWcs::wcs_set() method now sets radesys and equinox members (#2866)
        Add GCTAPointing::is_valid() method and remove table methods
        Set CTA IRF integration iterations to 6 to cope with H.E.S.S. PSF (#2860)
        Add kludge to handle incomplete Fermi-LAT source maps (#2850)
        Correct Nbgd computation in GCTAOnOffObservation for Non=0 (#2838)
        Improve OpenMP handling in GWcs::dir2pix (#2770)
        Add support for Fermi/LAT P8V3 response functions
        CTA background rates are now per ontime (#2758)
        Add GPythonOptimizerFunction class (#2733)
        Remove diffuse response cube caching (#2722)
        Revise GCTAEdispCube::operator() interface and disable stacked response
          cutting in true energy (#2721)